Changes on nav bar

--- a/index.html
+++ b/index.html
@@ -4,9 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link
+        rel="icon"
+        href="https://www.mintlify.com/favicon.ico?favicon.d9fa433b.ico"
+        type="image/x-icon"
+    />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <nav class="nav container">
+
+            <a href="#" class="nav-logo"> 
+                <img src="assests/mintlify-logo.ico" alt="mintlify logo" aria-hidden="true">
+                <span>mintlify</span>
+            </a>
+
+            <ul class="nav-links">
+                <li><a href="#">Resources</a></li>
+                <li><a href="#">Documentation</a></li>
+                <li><a href="#">Customers</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Pricing</a></li>
+            </ul>
+
+            <div class="nav-cta">
+                <a href="#" class="cta-link">Contact Sales</a>
+                <a href="#" class="cta-primary">Start for free</a>
+            </div>
+
+        </nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
