feat: added blur effect on nav bar

--- a/index.html
+++ b/index.html
@@ -38,11 +38,25 @@
 
         </nav>
     </header>
-    <main>
 
+    <main>
+        
     </main>
+
     <footer>
 
     </footer>
+
+    <script>
+        const header = document.getElementsByTagName('header');
+
+        window.addEventListener("scroll", () => {
+            if(window.scrollY > 10){
+                header.classList.add("scrolled");
+            }else{
+                header.classList.remove("scrolled");
+            }
+        })
+    </script>
 </body>
 </html>
