--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="page-bg">
+        <img src="./assests/bg-dark.svg" alt="" aria-hidden="true">
+    </div>
     <header>
         <nav class="nav container">
 
@@ -48,7 +51,7 @@
     </footer>
 
     <script>
-        const header = document.getElementsByTagName('header');
+        const header = document.querySelector('header');
 
         window.addEventListener("scroll", () => {
             if(window.scrollY > 10){
