--- a/index.html
+++ b/index.html
@@ -43,7 +43,32 @@
     </header>
 
     <main>
-        
+        <section class="hero-section">
+
+            <div class="suggestion">
+                <a href="#" class="suggestion-link">
+                    <span class="badge">NEW</span>
+                    <span class="suggestion-text">Self-updating docs with agent suggestions</span>
+                    <span class="suggestion-arrow">></span>
+                </a>
+            </div>
+
+            <div class="hero-text">
+                <h1>The Intelligent</h1>
+                <h1>Knowledge Platform</h1>
+            </div>
+
+            <div class="hero-subtext">
+                <p>Helping teams create and maintain world-class</p><p> built for both humans and AI</p>
+            </div>
+            
+            <div class="hero-email">
+                <form action="#" class="email-form">
+                    <input type="email" placeholder="Email address" required>
+                    <button type="submit">Start Now</button>
+                </form>
+            </div>
+        </section>
     </main>
 
     <footer>
