feat: minor changes

--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
                 <img src="./assests/hero-image-dark.svg" alt="Dashboard preview" aria-hidden="true">
             </div>
         </section>
+
+        <section class="logos-section">
+            <!-- continue this tomorrow -->
+        </section>
     </main>
 
     <footer>
