feat: added logos and text below it

--- a/index.html
+++ b/index.html
@@ -77,6 +77,51 @@
 
         <section class="logos-section">
             <!-- continue this tomorrow -->
+            <div class="logos-grid">
+                <figure class="logo-small">
+                    <img src="./assests/anthropic.png" alt="">
+                </figure>
+
+                <figure class="logo-small">
+                    <img src="./assests/coinbase.webp" alt="">
+                </figure>
+
+                <figure class="logo-small">
+                    <img src="./assests/microsoft.png" alt="">
+                </figure>
+
+                <figure class="logo-small">
+                    <img src="./assests/perplexity.png" alt="">
+                </figure>
+
+                <figure class="logo-small">
+                    <img src="./assests/hubspot.png" alt="">
+                </figure>
+
+                <figure>
+                    <img src="./assests/x.png" alt="">
+                </figure>
+
+                <figure>
+                    <img src="./assests/paypal.png" alt="">
+                </figure>
+
+                <figure>
+                    <img src="./assests/lovable.svg" alt="">
+                </figure>
+            </div>
+            
+        </section>
+
+        <section class="intelligence-age">
+            <div class="intelligence-age-container">
+                <h2>Built for the intelligence age</h2>
+
+                <div>
+                    <p>Integrate AI into every part of your docs lifecycle. Woven into how your</p>
+                    <p>knowledge is written, maintained, and understood by both users and LLMs.</p>
+                </div>
+            </div>
         </section>
     </main>
 
