feat: added darkmode images

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <!-- continue this tomorrow -->
             <div class="logos-grid">
                 <figure class="logo-small">
-                    <img src="./assests/anthropic.png" alt="">
+                    <img src="./assests/anthropic-white.svg" alt="">
                 </figure>
 
                 <figure class="logo-small">
@@ -91,15 +91,15 @@
                 </figure>
 
                 <figure class="logo-small">
-                    <img src="./assests/perplexity.png" alt="">
+                    <img src="./assests/perplexity-white.svg" alt="">
                 </figure>
 
                 <figure class="logo-small">
-                    <img src="./assests/hubspot.png" alt="">
+                    <img src="./assests/hubspot-white.svg" alt="">
                 </figure>
 
                 <figure>
-                    <img src="./assests/x.png" alt="">
+                    <img src="./assests/x-white-2.png" alt="">
                 </figure>
 
                 <figure>
@@ -107,7 +107,7 @@
                 </figure>
 
                 <figure>
-                    <img src="./assests/lovable.svg" alt="">
+                    <img src="./assests/loveable-white.png" alt="">
                 </figure>
             </div>
             
