--- a/index.html
+++ b/index.html
@@ -123,6 +123,48 @@
                 </div>
             </div>
         </section>
+
+        <section class="agent-assistant">
+            <div class="agent-parent">
+                <div class="llm-agent">
+                    <div class="llm-div">
+                        <div class="llm-div-text">
+                            <p class="llm-green-heading">LLMs.txt & MCP</p>
+                            <h3 class="llm-h3">Built for both people and AI</h3>
+                            <p class="llm-light-p">Ensure your product shows up in the AI workflows users already rely on. We support llms.txt, MCP, and whatever comes next.</p>
+                        </div>
+
+                        <div class="llm-div-img">
+                            <img src="./assests/copy-page.png" alt="">
+                        </div>
+                    </div>
+
+                    <div class="agent-div">
+                        <div class="llm-div-text">
+                            <p class="llm-green-heading">AGENT</p>
+                            <h3 class="llm-h3">Self-updating knowledge management</h3>
+                            <p class="llm-light-p">Draft, edit, and maintain content with a context-aware agent. Move faster and more consistently without the documentation debt.</p>
+                        </div>
+
+                        <div class="llm-div-img">
+                            <img src="./assests/agent.png" alt="">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="assistant">
+                    <div>
+                        <p class="assistant-text">ASSISTANT</p>
+                        <h4>Intelligent assistance for your users</h4>
+                        <p>Turn every documentation visit into a guided conversation. Your AI assistant understands context and delivers what users need.</p>
+                    </div>
+
+                    <div>
+                        <img src="./assests/assistant.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
