feat: added enterprise section

--- a/index.html
+++ b/index.html
@@ -165,6 +165,25 @@
                 </div>
             </div>
         </section>
+
+        <!-- check this section again and try to align cta properly -->
+        <section class="enterprise"> 
+            <div class="parent-enterprise-reinvention">
+                <div class="enterprise-reinvention">
+                    <h4 class="enterprise-label">Enterprise-reinvention</h4>
+                    <h3 class="enterprise-heading">Bring intelligence to enterprise knowledge</h3>
+                    <p class="enterprise-subtext">Modernize without the rebuild with enterprise-grade professional service & security.</p>
+                </div>
+
+                <div class="explore-cta">
+                    <a href="#" class="enterprise-button">Explore for enterprise</a>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            
+        </section>
     </main>
 
     <footer>
