feat: added the strucuture of new section

--- a/index.html
+++ b/index.html
@@ -181,8 +181,24 @@
             </div>
         </section>
 
-        <section>
-            
+        <section class="partnership-and-compliance">
+            <div class="parent-part-and-compli">
+                <div class="partnership">
+                    <div>
+                        <img src="" alt="">
+                    </div>
+                    <h4></h4>
+                    <p></p>
+                </div>
+
+                <div class="compliance">
+                    <div>
+                        <img src="" alt="">
+                    </div>
+                    <h4></h4>
+                    <p></p>
+                </div>
+            </div>
         </section>
     </main>
 
