feat: added the enterprise section

--- a/index.html
+++ b/index.html
@@ -184,19 +184,15 @@
         <section class="partnership-and-compliance">
             <div class="parent-part-and-compli">
                 <div class="partnership">
-                    <div>
-                        <img src="" alt="">
-                    </div>
-                    <h4></h4>
-                    <p></p>
+                    <img src="./assests/partnership.png" alt="" class="partnership-icon">
+                    <h4 class="partnership-title">Build with partnership</h4>
+                    <p class="partnership-text">Direct, white-glove access to our documentation experts. Dedicated migration support and guidance tailored to your setup, and elevated support SLAs.</p>
                 </div>
 
                 <div class="compliance">
-                    <div>
-                        <img src="" alt="">
-                    </div>
-                    <h4></h4>
-                    <p></p>
+                    <img src="./assests/compliance.png" alt="" class="compliance-icon">
+                    <h4 class="compliance-title">Compliance and access control</h4>
+                    <p class="compliance-text">Compliant with SOC 2, and in the process for ISO/27001 and GDPR compliance to meet your internal and external data requirements. Secure access and provisioning with SAML-based SSO.</p>
                 </div>
             </div>
         </section>
