style: removed unnecessary backdrop blur

--- a/index.html
+++ b/index.html
@@ -196,6 +196,10 @@
                 </div>
             </div>
         </section>
+
+        <section>
+            
+        </section>
     </main>
 
     <footer>
