feat: added story image

--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
             </div>
         </section>
 
-        <section>
-            
+        <section class="story-img">
+            <img src="./assests/antropic-cust-story.png" alt="" class="antropic-st-img">
         </section>
     </main>
 
