feat: added logos below story image

--- a/index.html
+++ b/index.html
@@ -200,6 +200,21 @@
         <section class="story-img">
             <img src="./assests/antropic-cust-story.png" alt="" class="antropic-st-img">
         </section>
+
+        <section class="story-logos">
+            <div class="str-logo-parent">
+                <img src="./assests/anthropic-str.png" alt="">
+                <img src="./assests/coinbase-str.png" alt="">
+                <img src="./assests/hubspot-str.png" alt="">
+                <img src="./assests/zapia-str.png" alt="">
+                <img src="./assests/at-str.png" alt="">
+            </div>
+        </section>
+
+        <!-- start here and complete the site tommorow -->
+        <section class="customer">
+
+        </section>
     </main>
 
     <footer>
