feat: added cutomer section and customer text

--- a/index.html
+++ b/index.html
@@ -213,7 +213,19 @@
 
         <!-- start here and complete the site tommorow -->
         <section class="customer">
+            <div class="customer-text">
+                <p class="customers-label">CUSTOMERS</p>
+                <h2 class="customers-heading">Unlock knowledge for any industry</h2>
+                <p class="customers-subtext">From frontier AI companies to consumer brands, leaders across industries scale with Mintlify.</p>
+            </div>
 
+            <div class="customer-cards">
+
+            </div>
+
+            <div class="customer-btns">
+
+            </div>
         </section>
     </main>
 
