feat: added cards

--- a/index.html
+++ b/index.html
@@ -220,7 +220,23 @@
             </div>
 
             <div class="customer-cards">
+                <div class="perplexity-card">
+                    <img src="./assests/perplexity-card-img.png" alt="" class="cust-img">
+                    <p class="cust-card-text">How Perplexity transformed its documentation into an AI-native developer experience that matches th...</p>
+                    <a href="#" class="cust-card-story">Read story ></a>
+                </div>
 
+                <div class="x-card">
+                    <img src="./assests/x-card-img.png" alt="" class="cust-img">
+                    <p class="cust-card-text">How X is using Mintlify to power the developer experience for the global town square</p>
+                    <a href="#" class="cust-card-story">Read story ></a>
+                </div>
+
+                <div class="kalshi-card">
+                    <img src="./assests/kalshi-card-img.png" alt="" class="cust-img">
+                    <p class="cust-card-text">How Kalshi helps developers discover what's possible faster and ultimately drive broader...</p>
+                    <a href="#" class="cust-card-story">Read story ></a>
+                </div>
             </div>
 
             <div class="customer-btns">
