--- a/index.html
+++ b/index.html
@@ -240,8 +240,13 @@
             </div>
 
             <div class="customer-btns">
-
+                <button class="left-arrow" aria-label="Previous">&#8249;</button>
+                <button class="right-arrow" aria-label="Next">&#8250;</button>
             </div>
+        </section>
+
+        <section>
+            
         </section>
     </main>
 
