feat: completed main section

--- a/index.html
+++ b/index.html
@@ -245,8 +245,32 @@
             </div>
         </section>
 
-        <section>
-            
+        <section class="documentation">
+            <div class="documentation-parent">
+                <h3 class="documentation-label">Make documentation your winning advantage</h3>
+                <p class="documentation-subtext">Join the leaders of tomorrow to future proof your documentation today.</p>
+
+                <div class="documentation-ctas">
+                    <button>Get started for free</button>
+                    <button>Get a demo</button>
+                </div>
+
+                <div class="documentation-cards">
+                    <div class="card-one">
+                        <img src="./assests/pricing-card-img.png" alt="">
+                        <h3>Pricing on your terms</h3>
+                        <p>Pick the plan that works best for you</p>
+                        <a href="#">Pricing details &#8250;</a>
+                    </div>
+
+                    <div class="card-two">
+                        <img src="./assests/building-card-img.png" alt="">
+                        <h3>Start building</h3>
+                        <p>Deploy your documentation in minutes</p>
+                        <a href="#">Quickstart &#8250;</a>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
