feat: added base version of footer

--- a/index.html
+++ b/index.html
@@ -275,7 +275,92 @@
     </main>
 
     <footer>
+        <section class="footer">
+            <!-- TOP BAR -->
+            <div class="footer-top footer-divider">
+                <div class="footer-container">
+                    <div class="footer-brand">
+                        <img src="./assests/mintlify-logo.ico" alt="">
+                        <span>mintlify</span>
+                    </div>
 
+                    <div class="footer-socials">
+                        <a href="#"><img src="./assests/footer-socials.png" alt=""></a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- LINK GRID -->
+            <div class="footer-links footer-divider">
+                <div class="footer-container footer-grid">
+                    <div>
+                        <h3>EXPLORE</h3>
+                        <a href="#">Startups</a>
+                        <a href="#">Enterprise</a>
+                        <a href="#">Switch</a>
+                        <a href="#">OSS Program</a>
+                    </div>
+
+                    <div>
+                        <h3>RESOURCES</h3>
+                        <a href="#">Customers</a>
+                        <a href="#">Blog</a>
+                        <a href="#">Pricing</a>
+                        <a href="#">Guides</a>
+                        <a href="#">Feature Requests</a>
+                    </div>
+
+                    <div>
+                        <h3>DOCUMENTATION</h3>
+                        <a href="#">Getting Started</a>
+                        <a href="#">API Reference</a>
+                        <a href="#">Components</a>
+                        <a href="#">Changelog</a>
+                    </div>
+
+                    <div>
+                        <h3>COMPANY</h3>
+                        <a href="#">Careers</a>
+                        <a href="#">Wall of Love</a>
+                    </div>
+
+                    <div>
+                        <h3>LEGAL</h3>
+                        <a href="#">Privacy Policy</a>
+                        <a href="#">Responsible Disclosure</a>
+                        <a href="#">Terms Of Service</a>
+                        <a href="#">Security</a>
+                        <a href="#">DSR/DSAR</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- SECURITY STRIP -->
+            <div class="footer-security footer-divider">
+                <div class="footer-container footer-security-row">
+                    <p>Backed by enterprise-grade security</p>
+                    <img src="./assests/certi-symbol.png" alt="">
+                </div>
+            </div>  
+
+            <!-- BOTTOM BAR -->
+            <div class="footer-bottom">
+                <div class="footer-container footer-bottom-row">
+                    <div class="system-status">
+                        <span><img src="./assests/system-normal.png" alt=""></span>
+                        <span>All systems normal</span>
+                    </div>
+
+                    <p class="copyright">© 2026 Mintlify, Inc.</p>
+
+                    <div class="footer-utils">
+                        <button><img src="./assests/system-mode.png" alt=""></button>
+                        <button><img src="./assests/light-mode.png" alt=""></button>
+                        <button><img src="./assests/dark-mode.png" alt=""></button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </footer>
 
     <script>
